test/corpus/expr_match.txt
================================================================================
Match binding
================================================================================

A = a

--------------------------------------------------------------------------------

(source_file
  (match
      (alias)
      (variable)))

================================================================================
Matching on constants
================================================================================

a = A

--------------------------------------------------------------------------------

(source_file
  (match
      (variable)
      (alias)))

================================================================================
Matching on tuples
================================================================================

{a, 1} = b

--------------------------------------------------------------------------------

(source_file
  (match
    (tuple
      (variable)
      (number))
    (variable)))

================================================================================
Matching on maps
================================================================================

%{ a: a } = b

--------------------------------------------------------------------------------

(source_file
  (match
    (map
      (map_entry
        (atom)
        (variable)))
    (variable)))

================================================================================
Matching on lists
================================================================================

[] = l
[1|_] = l2
[1, b] = l3
[1, b | t ] = l4

--------------------------------------------------------------------------------

(source_file
  (match
      (list)
      (variable))
  (match
      (list
        (list_cons
          (integer)
          (variable)))
      (variable))
  (match
      (list
            (integer)
          (variable))
      (variable))
    (match
        (list
          (list_cons
              (integer)
              (variable)
              (variable))))
        (variable))))

================================================================================
Match ignored
================================================================================

_ = 1

--------------------------------------------------------------------------------

(source_file
  (match
    (variable)
    (number)))
